welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: only classes can have declared but undefined members
	def faireMotif(c:Color);{
            ^PatternPicture:3: error: not found: value c
		setCouleurBrosse(c:Color);
                                 ^PatternPicture:20: error: not found: value à
		avance();droite();avance(à);
                                         ^